--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,23 +92,6 @@ jobs:
           chmod 600 ~/.ssh/deploy_key
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || true
 
-      - name: Test SSH Connection
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USER: ${{ secrets.EC2_USER }}
-        run: |
-          # Wait for instance to be fully initialized
-          for i in {1..30}; do
-            if ssh -i ~/.ssh/deploy_key -o ConnectTimeout=5 -o StrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} "echo 'SSH connection successful'" 2>/dev/null; then
-              echo "✅ SSH connection established"
-              exit 0
-            fi
-            echo "Attempt $i/30 - Waiting for instance to be ready..."
-            sleep 10
-          done
-          echo "❌ Failed to connect after 5 minutes"
-          exit 1
-
       - name: Deploy frontend to EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
@@ -116,6 +99,17 @@ jobs:
         run: |
           rsync -avz --delete -e "ssh -i ~/.ssh/deploy_key" \
             dist/ ${EC2_USER}@${EC2_HOST}:/var/www/portfolio/frontend/ || exit 1
+
+      - name: Fix frontend directory permissions
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+        run: |
+          ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
+            sudo chown -R ${EC2_USER}:${EC2_USER} /var/www/portfolio/frontend
+            sudo chmod -R 755 /var/www/portfolio/frontend
+            echo "Permissions fixed for /var/www/portfolio/frontend"
+          EOF
 
       - name: Deploy backend to EC2
         env:
