--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,9 +98,9 @@ jobs:
           EC2_USER: ${{ secrets.EC2_USER }}
         run: |
           ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
-            sudo chown -R ${EC2_USER}:${EC2_USER} /var/www/portfolio/frontend
-            sudo chmod -R 755 /var/www/portfolio/frontend
-            echo "Permissions fixed for /var/www/portfolio/frontend"
+            sudo find /var/www/portfolio/frontend -exec chown ${EC2_USER}:${EC2_USER} {} +
+            sudo find /var/www/portfolio/frontend -exec chmod 755 {} +
+            echo "Permissions fixed for /var/www/portfolio/frontend and all contents"
           EOF
 
       - name: Deploy frontend to EC2
