--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+            - name: Clean frontend directory before deploy
+              env:
+                EC2_HOST: ${{ secrets.EC2_HOST }}
+                EC2_USER: ${{ secrets.EC2_USER }}
+              run: |
+                ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
+                  rm -rf /var/www/portfolio/frontend/*
+                  echo "Cleaned /var/www/portfolio/frontend before deploy"
+                EOF
       - name: Checkout code
         uses: actions/checkout@v4
 
