--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,35 @@ jobs:
   build:
     name: Build Application
     runs-on: ubuntu-latest
-
     steps:
+        deploy:
+          name: Deploy to EC2
+          runs-on: ubuntu-latest
+          needs: build
+          if: success()
+          steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Download frontend artifacts
+              uses: actions/download-artifact@v4
+              with:
+                name: frontend-dist
+                path: dist/
+
+            - name: Download backend artifacts
+              uses: actions/download-artifact@v4
+              with:
+                name: backend-dist
+                path: backend/
+
+            - name: Configure SSH
+              run: |
+                mkdir -p ~/.ssh
+                echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+                chmod 600 ~/.ssh/deploy_key
+                ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || true
+
             - name: Clean frontend directory before deploy
               env:
                 EC2_HOST: ${{ secrets.EC2_HOST }}
