--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+            - name: Ensure frontend directory ownership and permissions
+              env:
+                EC2_HOST: ${{ secrets.EC2_HOST }}
+                EC2_USER: ${{ secrets.EC2_USER }}
+              run: |
+                ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
+                  sudo chown -R ${EC2_USER}:${EC2_USER} /var/www/portfolio/frontend
+                  sudo chmod -R 755 /var/www/portfolio/frontend
+                  echo "Ensured ownership and permissions for /var/www/portfolio/frontend"
+                EOF
       - name: Checkout code
         uses: actions/checkout@v4
 
