--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,32 +91,34 @@ jobs:
 
       - name: Download backend artifacts
         uses: actions/download-artifact@v4
-        with:
+          uses: actions/upload-artifact@v4
           name: backend-dist
           path: backend/
-
+          uses: actions/upload-artifact@v4
       - name: Configure SSH
         run: |
-          mkdir -p ~/.ssh
+          uses: actions/download-artifact@v4
           echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || true
+          uses: actions/download-artifact@v4
 
       - name: Clean frontend directory before deploy
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USER: ${{ secrets.EC2_USER }}
-        run: |
-          ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
-            rm -rf /var/www/portfolio/frontend/*
-            echo "Cleaned /var/www/portfolio/frontend before deploy"
+          run: |
+            mkdir -p ~/.ssh
+            echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+            chmod 600 ~/.ssh/deploy_key
+            ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || true
           EOF
 
-      - name: Fix frontend directory permissions
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USER: ${{ secrets.EC2_USER }}
-        run: |
+          env:
+            EC2_HOST: ${{ secrets.EC2_HOST }}
+            EC2_USER: ${{ secrets.EC2_USER }}
+          run: |
+            ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
+              sudo chown -R ${EC2_USER}:${EC2_USER} /var/www/portfolio/frontend
+              sudo chmod -R 755 /var/www/portfolio/frontend
+              echo "Ensured ownership and permissions for /var/www/portfolio/frontend"
+            EOF
           ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
             sudo find /var/www/portfolio/frontend -exec chown ${EC2_USER}:${EC2_USER} {} +
             sudo find /var/www/portfolio/frontend -exec chmod 755 {} +
