--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,16 +17,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-            - name: Ensure frontend directory ownership and permissions
-              env:
-                EC2_HOST: ${{ secrets.EC2_HOST }}
-                EC2_USER: ${{ secrets.EC2_USER }}
-              run: |
-                ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
-                  sudo chown -R ${EC2_USER}:${EC2_USER} /var/www/portfolio/frontend
-                  sudo chmod -R 755 /var/www/portfolio/frontend
-                  echo "Ensured ownership and permissions for /var/www/portfolio/frontend"
-                EOF
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+      - name: Install frontend dependencies
+        run: npm ci
+      - name: Lint frontend
+        run: npm run lint --if-present
+        continue-on-error: true
+      - name: Build React frontend
+        env:
+          VITE_COGNITO_REGION: ${{ secrets.VITE_COGNITO_REGION }}
+          VITE_COGNITO_USER_POOL_ID: ${{ secrets.VITE_COGNITO_USER_POOL_ID }}
+          VITE_COGNITO_CLIENT_ID: ${{ secrets.VITE_COGNITO_CLIENT_ID }}
+          VITE_API_URL: ${{ secrets.VITE_API_URL }}
+        run: npm run build
+      - name: Upload frontend artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-dist
+          path: dist/
+          retention-days: 1
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm ci --production
+      - name: Lint backend
+        working-directory: ./backend
+        run: npm run lint --if-present
+        continue-on-error: true
+      - name: Upload backend artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-dist
+          path: backend/
+          retention-days: 1
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -75,6 +103,16 @@ jobs:
           retention-days: 1
 
   deploy:
+          - name: Ensure frontend directory ownership and permissions
+            env:
+              EC2_HOST: ${{ secrets.EC2_HOST }}
+              EC2_USER: ${{ secrets.EC2_USER }}
+            run: |
+              ssh -i ~/.ssh/deploy_key ${EC2_USER}@${EC2_HOST} << 'EOF'
+                sudo chown -R ${EC2_USER}:${EC2_USER} /var/www/portfolio/frontend
+                sudo chmod -R 755 /var/www/portfolio/frontend
+                echo "Ensured ownership and permissions for /var/www/portfolio/frontend"
+              EOF
     name: Deploy to EC2
     runs-on: ubuntu-latest
     needs: build
